--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ flutter:
     - assets/Images/hello_logo.png
     - assets/Images/RiveAssets/Hello.riv
     - assets/Images/image.jpeg
+    - assets/Images/California.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
