--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^5.1.0
   quickalert: ^1.1.0
   google_sign_in: ^6.2.1
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
