--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   quickalert: ^1.1.0
   google_sign_in: ^6.2.1
   carousel_slider: ^4.2.1
+  line_awesome_flutter: ^3.0.1
 
 dev_dependencies:
   flutter_test:
