--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,8 @@ flutter:
     - assets/Images/RiveAssets/Hello.riv
     - assets/Images/image.jpeg
     - assets/Images/California.jpg
+    - assets/images/London.jpg
+    - assets/Images/Paris.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
