--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   line_awesome_flutter: ^3.0.1
   smooth_page_indicator: ^1.2.0+3
   like_button: ^2.0.5
+  dash_chat_2: ^0.0.21
 
 dev_dependencies:
   flutter_test:
