--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   smooth_page_indicator: ^1.2.0+3
   like_button: ^2.0.5
   dash_chat_2: ^0.0.21
+  chat_gpt_sdk: ^3.1.0
 
 dev_dependencies:
   flutter_test:
