--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -112,6 +112,7 @@ flutter:
     - assets/Images/Paris.jpg
     - assets/Images/Budapest.jpg
     - assets/credentials.json
+    - assets/Images/NiVi.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
