--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -113,6 +113,7 @@ flutter:
     - assets/Images/Budapest.jpg
     - assets/credentials.json
     - assets/Images/NiVi.png
+    - assets/Images/NiViBG.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
