--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   carousel_slider: ^5.0.0
   line_awesome_flutter: ^3.0.1
   like_button: ^2.0.5
+  fluttertoast: ^8.2.8
+  razorpay_flutter: ^1.3.7
 
 dev_dependencies:
   flutter_test:
