--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   like_button: ^2.0.5
   fluttertoast: ^8.2.8
   razorpay_flutter: ^1.3.7
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
