--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,10 +85,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: belanosima
+      fonts:
+        - asset: assets/Images/Belanosima/Belanosima/Belanosima-Regular.ttf
+      
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
