--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  cloud_firestore: ^5.4.0
+  cloud_firestore: ^5.4.4
   flutter_gemini: ^2.0.5
   firebase_auth: ^5.2.0
   rive: ^0.13.13
@@ -47,6 +47,7 @@ dependencies:
   fluttertoast: ^8.2.8
   razorpay_flutter: ^1.3.7
   table_calendar: ^3.1.2
+  firebase_core: ^3.6.0
 
 dev_dependencies:
   flutter_test:
