--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   razorpay_flutter: ^1.3.7
   table_calendar: ^3.1.2
   firebase_core: ^3.6.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
